<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Dynamic WallPaper">
        <menu>
            <item
                android:id="@+id/nav_wall_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="Auto WallPaper" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_featured"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/featured" />
        <item
            android:id="@+id/nav_random"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/random" />
        <item
            android:id="@+id/nav_nature"
            android:icon="@drawable/ic_cat_nature"
            android:title="@string/nature" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_cat_food"

            android:title="@string/food" />
        <item
            android:id="@+id/nav_technology"
            android:icon="@drawable/ic_cat_technology"

            android:title="@string/technology" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_cat_people"

            android:title="@string/people" />
        <item
            android:id="@+id/nav_buildings"
            android:icon="@drawable/ic_cat_building"

            android:title="@string/buildings" />
        <item
            android:id="@+id/nav_objects"
            android:icon="@drawable/ic_cat_object"

            android:title="@string/object" />



    </group>


    <item android:title="Share">
        <menu>
            <item
                android:id="@+id/nav_send_wall"
                android:icon="@drawable/ic_menu_send"
                android:title="Send This Wall" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_suggestion"
                android:title="Suggestion" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/ic_rate_us"
                android:title="Rate Us" />


        </menu>
    </item>

    <item android:title="About us - Crafty Studio">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about_us"
                android:title="About us" />
        </menu>
    </item>

</menu>
